--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -140,14 +140,18 @@ footer img {
 }
 
 footer p {
+    margin-top: 30px;
     color: #b3aeb5;
     font-size: 12px;
-    text-align: left;
+    text-align: center;
 }
 
 footer {
+    margin-top: 120px;
+    height: 180px;
     border-top: 1px solid #eee;
     padding-top: 30px;
+    background-color: white;
 }
 
 .feature {
@@ -166,4 +170,20 @@ footer {
     font-size: 40px;
     color: #f1c40f;
     margin-right: 20px;
+}
+
+.link img {
+    width: 150px;
+    margin-right: 30px;
+    margin-left: 30px;
+    vertical-align: middle;
+}
+
+.manager {
+    margin-top: 100px;
+}
+
+.fccpc {
+    width: 200px;
+    margin-bottom: 80px;
 }
